--- a/src/app/features/auth/sign-in/sign-in.component.html
+++ b/src/app/features/auth/sign-in/sign-in.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="signinForm" (ngSubmit)="signin()" class="sign-in-form">
   
         <mat-form-field class="col-xs-12 border-input">
-          <input matInput formControlName="phone" type="number" placeholder="Phone No." />
+          <input matInput formControlName="phone" type="number" min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57" placeholder="Phone No." />
            <small
                     *ngIf="signinForm.controls['phone'].hasError('required') && signinForm.controls['phone'].touched"
                     class="signinForm-error-msg"> Phone No is required </small>
