--- a/src/app/features/bom/bom-table/bom-table.component.html
+++ b/src/app/features/bom/bom-table/bom-table.component.html
@@ -57,9 +57,9 @@
           </th>
           <td class="text-align-center" mat-cell *matCellDef="let element">{{ element.estimatedQty }} {{ element.materialUnit }}</td>
         </ng-container>
-        <ng-container matColumnDef="requestedQuantity">
+        <ng-container matColumnDef="indentedQuantity">
           <th *matHeaderCellDef class="text-align-center justify-center">
-            Requested Quantity
+            Indented Quantity
           </th>
           <td class="text-align-center" mat-cell *matCellDef="let element">{{ element.requestedQuantity }} {{ element.materialUnit }}</td>
         </ng-container>
@@ -99,22 +99,26 @@
               <mat-icon>edit</mat-icon>
             </a> -->
 
-            <a *ngIf="permissionObj.rfqFlag" (click)="issueToIndent(element.materialId, projectId)" class="width-15-px p-r-10 cursor-pointer issue-to-indent-icon" matTooltip="Issue to Indent">
+            <a *ngIf="permissionObj.rfqFlag && (!(element.availableStock === 0 || element.availableStock === null))" (click)="issueToIndent(element.materialId, projectId)" class="width-15-px p-r-10 cursor-pointer issue-to-indent-icon" matTooltip="Issue to Indent">
               <img src="../../../../assets/images/issue_to_indent.png" />
+            </a>
+
+
+            <a *ngIf="permissionObj.rfqFlag && (element.availableStock === 0 || element.availableStock === null)" class="width-15-px p-r-10  issue-to-indent-icon">
+              <img src="../../../../assets/images/issue_to_indent_disabled.png" />
             </a>
             
             <a
               class="width-15-px p-l-5 cursor-pointer"
               matTooltip="Delete"
-              *ngIf="!((element.requestedQuantity === 0 || element.requestedQuantity === null) && (element.availableStock === 0 || element.availableStock === null) && (element.issueToProject === 0 || element.issueToProject === null))"
+              *ngIf="((element.requestedQuantity === 0 || element.requestedQuantity === null) && (element.availableStock === 0 || element.availableStock === null) && (element.issueToProject === 0 || element.issueToProject === null))"
               (click)="deleteBom(element.materialId, element.projectId, element.requestedQuantity === 0 && element.availableStock === 0 && element.issueToProject === 0)"
             >
               <img src="../../../../assets/images/delete-button.png" />
             </a>
             <a
               class="width-15-px p-l-5 "
-              *ngIf="(element.requestedQuantity === 0 || element.requestedQuantity === null) && (element.availableStock === 0 || element.availableStock === null) && (element.issueToProject === 0 || element.issueToProject === null)"
-              (click)="deleteBom(element.materialId, element.projectId, element.requestedQuantity === 0 && element.availableStock === 0 && element.issueToProject === 0)"
+              *ngIf="!((element.requestedQuantity === 0 || element.requestedQuantity === null) && (element.availableStock === 0 || element.availableStock === null) && (element.issueToProject === 0 || element.issueToProject === null))"
             >
               <img src="../../../../assets/images/delete-button_disable.png" />
             </a>
