--- a/src/app/features/indent/indent-dashboard.component.html
+++ b/src/app/features/indent/indent-dashboard.component.html
@@ -38,19 +38,19 @@
           </ng-container>
 
           <!-- Name Column -->
-          <ng-container matColumnDef="Requested Material">
-            <th mat-header-cell *matHeaderCellDef class="text-align-center">Requested Material</th>
+          <ng-container matColumnDef="Requested Quantity">
+            <th mat-header-cell *matHeaderCellDef class="text-align-center">Requested Quantity</th>
             <td mat-cell *matCellDef="let element" class="text-align-center"> {{ element.requestedQuantity }}
               {{ element.materialUnit }}</td>
           </ng-container>
 
           <!-- Weight Column -->
           <ng-container matColumnDef="Required Quantity">
-            <th mat-header-cell *matHeaderCellDef>Required Quantity</th>
+            <th mat-header-cell *matHeaderCellDef class="text-align-center">Required Quantity</th>
 
-            <td mat-cell *matCellDef="let element; let i = index">
+            <td mat-cell *matCellDef="let element; let i = index" class="text-align-center">
               <mat-form-field [formGroupName]="i" class="border-input table-input">
-                <input matInput formControlName="quantity" type="number" placeholder="Required Quantity" />
+                <input matInput formControlName="quantity" type="number" min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57" placeholder="Required Quantity" />
               </mat-form-field> {{element.materialUnit}}
             </td>
           </ng-container>
