--- a/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
+++ b/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
@@ -54,7 +54,7 @@
             <th mat-header-cell *matHeaderCellDef>Awarded Rate</th>
             <td mat-cell *matCellDef="let element; let i = index">
               <mat-form-field [formGroupName]="i + (mati ? checkedMaterialsList[mati].prevMatListLength : 0)" class="border-input table-input">
-                <input matInput formControlName="materialUnitPrice" type="number" placeholder="Awarded Rate" />
+                <input matInput formControlName="materialUnitPrice" type="number" placeholder="Awarded Rate" min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57"/>
               </mat-form-field>
             </td>
           </ng-container>
@@ -63,7 +63,7 @@
             <th mat-header-cell *matHeaderCellDef>Quantity</th>
             <td mat-cell *matCellDef="let element; let i = index">
               <mat-form-field [formGroupName]="i + (mati ? checkedMaterialsList[mati].prevMatListLength : 0)" class="border-input table-input">
-                <input matInput formControlName="materialQty" type="number" placeholder="Quantity" />
+                <input matInput formControlName="materialQty" type="number" placeholder="Quantity" min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57"/>
               </mat-form-field>
             </td>
           </ng-container>
