--- a/src/app/features/rfq/quantity-makes/quantity-makes.component.html
+++ b/src/app/features/rfq/quantity-makes/quantity-makes.component.html
@@ -92,7 +92,7 @@
                 <td mat-cell *matCellDef="let element; let i = index">
                   <mat-form-field [formGroupName]="(i +  (mati ? checkedMaterialsList[mati].prevMatListLength : 0))"
                     class="border-input table-input">
-                    <input matInput formControlName="estimatedRate" type="number" placeholder="Estimated Rate" />
+                    <input matInput formControlName="estimatedRate" type="number" placeholder="Estimated Rate" min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57"/>
                   </mat-form-field>
                 </td>
               </ng-container>
@@ -102,7 +102,7 @@
                 <td mat-cell *matCellDef="let element; let  i= index">
                   <mat-form-field [formGroupName]="(i +  (mati ? checkedMaterialsList[mati].prevMatListLength : 0))"
                     class="border-input table-input">
-                    <input matInput formControlName="quantity" type="number" placeholder="Quantity" />
+                    <input matInput formControlName="quantity" type="number" placeholder="Quantity" min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57"/>
                   </mat-form-field>
                 </td>
               </ng-container>
