--- a/src/app/features/supplier/supplier-details/supplier-details.component.html
+++ b/src/app/features/supplier/supplier-details/supplier-details.component.html
@@ -49,9 +49,9 @@
                 <a class="cursor-pointer"(click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')"> Download Supplier Template</a></span>
             </div>
             <div  class="mr-3 p-t-10 cursor-pointer">
-              <input type="file" accept=".xlsx" #fileDropRef id="fileDropRef" class="fileupload cursor-pointer" multiple
+              <input type="file" accept=".xlsx" #fileDropRef id="fileDropRef" class="fileupload cursor-pointer" style="display: none;" multiple
                 (change)="uploadExcel($event.target.files)" />
-              <span class="cursor-pointer"> <img src="assets/images/upload.png" alt="upload" class="img-fluid mr-2 w-30 cursor-pointer"> Upload Supplier Template</span>
+              <label for="fileDropRef" class="cursor-pointer upload-template"> <img src="assets/images/upload.png" alt="upload" class="img-fluid mr-2 w-30 cursor-pointer"> Upload Supplier Template</label>
             </div>
               <button mat-raised-button (click)="addSupplier()" class="main-background-color main-button color-white add-supplier-button">
                 Add Supplier
