--- a/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
+++ b/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
@@ -40,7 +40,7 @@
               <!-- <input matInput type="number" placeholder="Quantity"> -->
 
               <mat-form-field [formGroupName]="i" class="border-input table-input">
-                <input matInput formControlName="certifiedQty" type="number" placeholder="Certified Quantity" />
+                <input matInput formControlName="certifiedQty" type="number" placeholder="Certified Quantity" min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57" />
               </mat-form-field>
               <!-- {{ element.certifiedQuantity }} -->
             </td>
