--- a/src/app/shared/dialogs/add-project/add-project-component.html
+++ b/src/app/shared/dialogs/add-project/add-project-component.html
@@ -9,13 +9,14 @@
     <div class="col-sm-12 display-flex m-t-20">
       <div class="col-sm-2">
         <div class="project-profile">
-          <img src="../../../../assets/images/2020-01-08.jpg" />
+            <img [src]="localImg || '../../../../assets/images/project-default-image.png'">
         </div>
-        <!-- <div class="upload-photo-btn">
-          <button type="button" (click)="uploadPhoto()">
-            <span aria-hidden="true">Upload Photo</span>
-          </button>
-        </div> -->
+        <div class="upload-photo-btn browser-method p-t-10">
+         <label class="myLabel">
+              <input type="file" accept=".jpg,.jpeg,.png,.webp" (change)="onFileSelect($event)" />
+                   <span>Upload</span>
+              </label>
+        </div>
       </div>
       <!-- new structure -->
       <div class="col-sm-10 add-edit-form-dialog">
@@ -59,7 +60,7 @@
             <!-- PinCode -->
             <mat-form-field class="border-input">
               <mat-label>Pincode*</mat-label>
-              <input matInput type="text" formControlName="pinCode" />
+              <input matInput type="text" (input)="getPincode($event)" formControlName="pinCode" />
               <!-- <mat-error>PinCode is Required</mat-error> -->
               <small *ngIf="form.controls['pinCode'].hasError('required') && form.controls['pinCode'].touched"
                 class="error-msg"> pincode is required </small>
@@ -69,13 +70,10 @@
           </div>
           <div class="col-sm-6">
             <!-- city -->
-            <mat-form-field class="border-select">
+           <mat-form-field class="border-input">
               <mat-label>City*</mat-label>
-              <mat-select formControlName=city>
-                <mat-option *ngFor="let city of cities" [value]="city.value">
-                  {{city.viewValue}}
-                </mat-option>
-              </mat-select>
+              <input matInput type="string" formControlName="city" />
+              <!-- <mat-error>State is Required</mat-error> -->
             </mat-form-field>
           </div>
         </div>
@@ -140,7 +138,7 @@
             <mat-form-field class="border-input">
               <mat-label>Area</mat-label>
               <!-- <mat-error>ProjectArea is Required</mat-error> -->
-              <input matInput type="number" formControlName="area" required />
+              <input matInput type="number" formControlName="area" min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57" required />
 
             </mat-form-field>
           </div>
@@ -165,7 +163,7 @@
             <!-- construction cost -->
             <mat-form-field class="border-input">
               <mat-label>Construction Cost &#x20b9;</mat-label>
-              <input matInput type="number" formControlName="cost" required />
+              <input matInput type="number" formControlName="cost" min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57" required />
               <!-- <mat-error>Construction Cost is Required</mat-error> --> 
             </mat-form-field>
           </div>
@@ -185,7 +183,7 @@
           <div class="col-sm-6">
             <!-- project Type -->
             <mat-form-field class="border-input">
-              <mat-label>GST IN</mat-label>
+              <mat-label>GSTIN</mat-label>
               <input matInput type="text" formControlName="gstNo" />
               <!-- <small *ngIf="form.controls['gstNo'].hasError('required') && form.controls['gstNo'].touched"
                 class="form-error-msg"> Gst No is required </small> -->
@@ -206,7 +204,7 @@
       <button mat-raised-button [disabled]="!form.valid || sameStartEndDate"
         class="main-background-color main-button color-white pull-right">
         <span *ngIf="!data.isEdit">Add</span>
-        <span *ngIf="data.isEdit">Edit</span>
+        <span *ngIf="data.isEdit">Save</span>
       </button>
     </div>
   </div>
