--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -488,3 +488,7 @@ mat-accordion {
   .font-bold{
     font-weight: 500;
   }
+  .upload-template:hover{
+    color: $main-color;
+    cursor: pointer;
+  }
