--- a/src/assets/scss/pages/bom-preview.scss
+++ b/src/assets/scss/pages/bom-preview.scss
@@ -39,4 +39,5 @@
 input[type=file], /* FF, IE7+, chrome (except button) */
 input[type=file]::-webkit-file-upload-button { /* chromes and blink button */
     cursor: pointer; 
+    color: transparent;
 }
