--- a/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
+++ b/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
@@ -20,6 +20,18 @@
             <td mat-cell *matCellDef="let element">{{ element.materialBrand }}</td>
           </ng-container>
 
+           <ng-container matColumnDef="Unit">
+            <th mat-header-cell *matHeaderCellDef class="text-align-center">Unit</th>
+            <td mat-cell *matCellDef="let element" class="text-align-center">
+             <span *ngIf="element.materialUnit != ''">
+                 {{ element.materialUnit }}
+             </span>
+              <span *ngIf="element.materialUnit == ''">
+                 -
+             </span>
+            </td>
+          </ng-container>
+
           <ng-container matColumnDef="Awarded Quantity">
             <th mat-header-cell *matHeaderCellDef class="text-align-center">Awarded Quantity</th>
             <td mat-cell *matCellDef="let element" class="text-align-center">
