Bell Notif refinements

--- a/src/assets/scss/pages/supplier.scss
+++ b/src/assets/scss/pages/supplier.scss
@@ -603,7 +603,7 @@ mat-icon {
     }
 }
 
-.header-bell-menu button.mat-menu-item {
+.header-bell-menu .main-div-bell.mat-menu-item {
     width: 100%;
     height: auto;
     max-height: 319px;
@@ -619,7 +619,7 @@ mat-icon {
 .header-bell-menu.mat-menu-panel {
     min-width: 412px !important;
     }
-    .header-bell-menu.mat-menu-item {
+    .header-bell-menu.mat-menu-ite\m {
         height: auto;
     }
 
