--- a/src/app/shared/layout/header/top-header/top-header.component.html
+++ b/src/app/shared/layout/header/top-header/top-header.component.html
@@ -36,7 +36,7 @@
 </mat-toolbar>
 
     <mat-menu #notifs="matMenu" class="header-bell-menu">
-            <button mat-menu-item>
+            <div class="main-div-bell" mat-menu-item>
                   <div id="notifications">
                 <h3>Notifications</h3>
                 <div class="body-of-notification">
@@ -87,5 +87,5 @@
                 </div>
                 <!-- <div class="seeAll"><a href="#">View All</a></div> -->
             </div>
-            </button>
+            </div>
     </mat-menu> 
