--- a/src/app/features/users/user-details/user-details.component.html
+++ b/src/app/features/users/user-details/user-details.component.html
@@ -107,8 +107,7 @@
                   <th mat-header-cell *matHeaderCellDef class="edit-disable-user-details-width"></th>
                   <td mat-cell *matCellDef="let element" class="edit-disable-user-details-width">
                     <mat-icon aria-hidden="false" (click)="deactivateUser(element)">
-                      <a class="width-22-px p-r-10 p-t-10 cursor-pointer">
-                        <img src="../../../../assets/images/user-disable.png" /> </a
+                      <a class="width-22-px p-r-10 p-t-10 cursor-pointer"> <img src="../../../../assets/images/user-disable.png" /> </a
                     ></mat-icon>
                     <i class="material-icons main-color" (click)="editProject(element)">
                       <a class="width-17-px p-r-20 cursor-pointer margin-top-minus3px">
@@ -162,22 +161,7 @@
                 </ng-container>
 
                 <!-- Weight Column -->
-                <ng-container matColumnDef="Phone"
-                  >ecause of an unresolved conflict. apaar@mystic:~/Desktop/angular/erpMaterial/frontend$ git add . apaar@mystic:~/Desktop/angular/erpMaterial/frontend$ git commit
-                  -m 'auth' [master 4b329ce] auth apaar@mystic:~/Desktop/angular/erpMaterial/frontend$ git push Username for 'https://code.buildsupply.com': apaarseth Password for
-                  'https://apaarseth@code.buildsupply.com': Counting objects: 113, done. Delta compression using up to 8 threads. Compressing objects: 100% (39/39), done. Writing
-                  objects: 100% (113/113), 28.37 KiB | 14.19 MiB/s, done. Total 113 (delta 82), reused 104 (delta 74) remote: Resolving deltas: 100% (82/82), completed with 47
-                  local objects. To https://code.buildsupply.com/apaarseth/frontend.git 081e822..4b329ce master -> master apaar@mystic:~/Desktop/angular/erpMaterial/frontend$ git
-                  pull upstream master Username for 'https://code.buildsupply.com': apaarseth Password for 'https://apaarseth@code.buildsupply.com': From
-                  https://code.buildsupply.com/erp/imaterial/frontend * branch master -> FETCH_HEAD Already up to date. apaar@mystic:~/Desktop/angular/erpMaterial/frontend$ ecause
-                  of an unresolved conflict. apaar@mystic:~/Desktop/angular/erpMaterial/frontend$ git add . apaar@mystic:~/Desktop/angular/erpMaterial/frontend$ git commit -m
-                  'auth' [master 4b329ce] auth apaar@mystic:~/Desktop/angular/erpMaterial/frontend$ git push Username for 'https://code.buildsupply.com': apaarseth Password for
-                  'https://apaarseth@code.buildsupply.com': Counting objects: 113, done. Delta compression using up to 8 threads. Compressing objects: 100% (39/39), done. Writing
-                  objects: 100% (113/113), 28.37 KiB | 14.19 MiB/s, done. Total 113 (delta 82), reused 104 (delta 74) remote: Resolving deltas: 100% (82/82), completed with 47
-                  local objects. To https://code.buildsupply.com/apaarseth/frontend.git 081e822..4b329ce master -> master apaar@mystic:~/Desktop/angular/erpMaterial/frontend$ git
-                  pull upstream master Username for 'https://code.buildsupply.com': apaarseth Password for 'https://apaarseth@code.buildsupply.com': From
-                  https://code.buildsupply.com/erp/imaterial/frontend * branch master -> FETCH_HEAD Already up to date. apaar@mystic:~/Desktop/angular/erpMaterial/frontend$
-
+                <ng-container matColumnDef="Phone">
                   <th mat-header-cell *matHeaderCellDef>Phone</th>
                   <td mat-cell *matCellDef="let element">
                     {{ element.ProjectUser.contactNo }}
